--- a/portfolio/src/style/index.css
+++ b/portfolio/src/style/index.css
@@ -40,3 +40,15 @@ section{
     text-align: center;
 }
 
+@media screen and (max-width: 760px) {
+    .app{
+        justify-content: center;
+        align-items: center;
+    }
+    .main_content{
+        justify-content: center;
+        margin-right: 6%;
+        margin-left: 6%;
+        font-size: 90%;
+    }
+}
