--- a/portfolio/src/style/project.css
+++ b/portfolio/src/style/project.css
@@ -145,13 +145,12 @@ blue #45f3ff
     margin-bottom:1rem;
     z-index: 1;
     color: #00BE67;
-    text-shadow: 0 0 0.1em #FFF7,
-                 0 0 0.1em  #00BE67;
-    animation:  project_title 2s infinite;
-    transition: ease-in-out;
+    /* text-shadow: 0 0 0.1em #FFF7,
+                 0 0 0.1em  #00BE67; */
+    /* animation:  project_title 2s infinite; */
 } 
 
-@keyframes project_title {
+/* @keyframes project_title {
     0%{
         text-shadow: 0 0 0.1em #FFF7,
         0 0 0.1em  #00BE67;
@@ -198,7 +197,7 @@ blue #45f3ff
         text-shadow: 0 0 0.1em rgba(204, 194, 194, 0.467),
         0 0 0.1em  #06c57c;
     }
-}
+} */
 
 .project_link{
     display: flex;
@@ -221,8 +220,6 @@ blue #45f3ff
   position: relative;
   z-index: 1;
   cursor: pointer;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-shadow: inset 0 0 1rem #13df83, 0 0 1rem #10fe10;
 }
 
 
@@ -257,6 +254,10 @@ blue #45f3ff
   clip-path: var(--slice-0);
 }
 
+
+.detailbtn:hover{
+  box-shadow: inset 0 0 1rem #13df83, 0 0 1rem #10fe10;
+}
 
 .detailbtn:hover:after {
   animation: 1s glitch infinite;
@@ -390,13 +391,11 @@ blue #45f3ff
   z-index: 3;
   left:15px;
   top:20px;
-  transition: 0.5 ease-in;
-  filter: blur(0.5px);
+  transition: 0.5s ease-in;
 }
 
 .closebtn:hover{
   color: #00BE67;
-
 }
 
 .closebtn.btn-hidden {
