--- a/portfolio/src/style/project.css
+++ b/portfolio/src/style/project.css
@@ -6,13 +6,6 @@
    grid-gap: 3rem;
 }
 
-.project_title{
-  font-family: Tomorrow, sans-serif;
-  color: #00BE67;
-  font-size: 250%;
-  text-align: center;
-}
-
 @media screen and (max-width: 1024px) {
     .project-container{
         grid-template-columns:repeat(2, 1fr);
@@ -22,6 +15,12 @@
       position: relative;
       margin-top: 20%;
       gap:1.2rem;
+    }
+  }
+  @media  screen and (max-width:1280px) {
+    .project_tool_group{
+      padding-left:8%;
+      padding-right:6%;
     }
   }
   @media screen and (max-width: 665px) {
@@ -51,7 +50,16 @@
       right: 0px;
     }
   }
-  @media screen and (max-width: 375px) {    
+
+
+  @media screen and (max-width: 395px) {  
+    .project{
+      font-size:100%;
+    }  
+    .project_tool_group{
+      padding-left:8%;
+      padding-right:6%;
+    }
     .btn{
       left: 10px;
       position: relative;
@@ -61,6 +69,18 @@
       right: 10px;
     }
 }
+
+  @media screen and (max-width:280px){
+    .project_tools .toolsName{
+      width:80px !important;           
+    }
+    .project_tool_group{
+      grid-template-columns: repeat( auto-fill, minmax(75px, 1fr)) !important;
+    }
+    .gradient-text{
+      font-size: 150% !important;
+    }
+  }
 
 .project{
     position: relative;
@@ -145,59 +165,7 @@ blue #45f3ff
     margin-bottom:1rem;
     z-index: 1;
     color: #00BE67;
-    /* text-shadow: 0 0 0.1em #FFF7,
-                 0 0 0.1em  #00BE67; */
-    /* animation:  project_title 2s infinite; */
 } 
-
-/* @keyframes project_title {
-    0%{
-        text-shadow: 0 0 0.1em #FFF7,
-        0 0 0.1em  #00BE67;
-    }
-    15%{
-        text-shadow: 0 0 0.15em #FFF7,
-        0 0 0.15em  #00BE67;
-    }
-
-    25%{
-        text-shadow: 0 0 0.25em #FFF7,
-        0 0 0.25em  #00BE67;
-    }
-
-    35%{
-        text-shadow: 0 0 0.35em #FFF7,
-        0 0 0.35em  #00BE67;
-    }
-    45%{
-        text-shadow: 0 0 0.45em #FFF7,
-        0 0 0.45em  #00BE67;
-    }
-    55%{
-        text-shadow: 0 0 0.55em #FFF7,
-        0 0 0.55em  #00ff9f;
-    }
-    65%{
-      text-shadow: 0 0 0.45em #FFF7,
-      0 0 0.45em  #00BE67;
-    }
-    75%{
-        text-shadow: 0 0 0.35em #FFF7,
-        0 0 0.35em  #0a8354;
-    }
-    85%{
-        text-shadow: 0 0 0.25em #FFF7,
-        0 0 0.25em  #139865;
-    }
-    95%{
-        text-shadow: 0 0 0.15em #FFF7,
-        0 0 0.15em  #35e9a4;
-    }
-    100%{
-        text-shadow: 0 0 0.1em rgba(204, 194, 194, 0.467),
-        0 0 0.1em  #06c57c;
-    }
-} */
 
 .project_link{
     display: flex;
@@ -340,7 +308,7 @@ blue #45f3ff
 .project_detail{
   position: relative;
   padding:20px;
-  bottom: 10%;
+  bottom: 15%;
   display: block;
 }
 
@@ -409,7 +377,8 @@ blue #45f3ff
 
 
 .projectAim{
-  margin-top: 60%;
+  font-family: Tomorrow, sans-serif;
+  margin-top: 70%;
   color: #F500BD;
   text-shadow: 0 0 0.1em #FFF7,
                0 0 0.3em  #ef0dd1;
@@ -421,9 +390,56 @@ blue #45f3ff
   color:#06c57c;;
   text-shadow: 0 0 0.2rem rgba(204, 194, 194, 0.467),
                 0 0 0.5rem  #06c57c;
-                
+  margin-bottom: 5%;           
+  text-align: center;
 }
 
+.tools-title{
+  font-family: Tomorrow, sans-serif;
+  color:#06c57c;;
+  text-shadow: 0 0 0.2rem rgba(204, 194, 194, 0.467),
+  0 0 0.5rem  #06c57c;
+  border: #00f51d solid;
+  padding:10px;
+  width:50%;
+  left: 100%;
+  text-align: center;
+  
+}
+
+.project_tool_group{
+  position: relative;
+  display: grid;
+  flex-direction: column;
+  grid-template-columns: repeat( auto-fill, minmax(95px, 1fr) );
+  justify-content: flex-start;
+  gap:0.7rem;
+  align-items: center;
+}
+
+.project_tools .toolsName{
+  font-family: Tomorrow, sans-serif;
+  margin-top:5%;
+  font-size: 80%;
+  width:100px;
+  border-radius: 0.7rem;
+  background-color: #252725;
+  padding:8px;               
+}
+
+.project_tools:nth-child(odd) .toolsName {
+  border: #00BE67 solid;
+  color: #00BE67 ;
+  text-shadow: 0 0 0.1em #FFF7,
+               0 0 0.3em  #00BE67 ;
+}
+
+.project_tools:nth-child(even) .toolsName {
+  border: #F500BD solid;
+  color: #F500BD;
+  text-shadow: 0 0 0.1em #FFF7,
+               0 0 0.3em  #ef0dd1;
+}
 
 .linkInfo{
   position: relative;
@@ -442,104 +458,6 @@ blue #45f3ff
     display: inline-block;
 }
 
-.btn:hover::before{
-  content: " ";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background: linear-gradient(rgba(0, 0, 0, 0) 50%, 
-                              rgba(250, 5, 5, 0.25) 50%), 
-              linear-gradient(90deg, rgba(145, 138, 138, 0.06rgba(44, 171, 167, 0.02)02), rgba(0, 0, 255, 0.06));
-  z-index: 0;
-  background-size: 100% 2px, 3px 100%;
-  pointer-events: none;
-  cursor: pointer;
-}
-
-.btn:hover::after{
-    content: " ";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.1);
-    opacity: 0;
-    z-index: 0;
-    pointer-events: none;
-    animation: flicker 0.15s infinite;
-    cursor: pointer;
-}
-
-@keyframes flicker {
-    0% {
-    opacity: 0.27861;
-    }
-    5% {
-    opacity: 0.34769;
-    }
-    10% {
-    opacity: 0.23604;
-    }
-    15% {
-    opacity: 0.90626;
-    }
-    20% {
-    opacity: 0.18128;
-    }
-    25% {
-    opacity: 0.83891;
-    }
-    30% {
-    opacity: 1.65583;
-    }
-    35% {
-    opacity: 1.67807;
-    }
-    40% {
-    opacity: 1.26559;
-    }
-    45% {
-    opacity: 0.84693;
-    }
-    50% {
-    opacity: 3.96019;
-    }
-    55% {
-    opacity: 0.08594;
-    }
-    60% {
-    opacity: 0.20313;
-    }
-    65% {
-    opacity: 0.71988;
-    }
-    70% {
-    opacity: 0.53455;
-    }
-    75% {
-    opacity: 0.37288;
-    }
-    80% {
-    opacity: 0.71428;
-    }
-    85% {
-    opacity: 0.70419;
-    }
-    90% {
-    opacity: 0.7003;
-    }
-    95% {
-    opacity: 0.36108;
-    }
-    100% {
-    opacity: 0.24387;
-    }
-  }
 
 .btn:hover{
     border: 2px #F500BD solid;
@@ -552,7 +470,14 @@ blue #45f3ff
   cursor: pointer;
 }
 
-
+.btn:hover{
+  animation: textShadow 1.5s infinite;
+  background-color: #59244d;
+  text-shadow: 0 0 0.2em #FFF7,
+  0 0 0.3em  #000;
+  box-shadow: inset 0 0 0.9rem  #f800b6,
+       0 0 0.8rem  #e100ff;
+}
 
 .btn2{
     font-family: Tomorrow, sans-serif;
