adjust the position on each page

--- a/portfolio/src/style/home.css
+++ b/portfolio/src/style/home.css
@@ -1,8 +1,15 @@
 
+#Home{
+  height: 100vh;
+  margin-bottom: 0;
+  left: 0;
+  bottom: 0;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .home-container {
   position: relative;
-  margin-top: 15rem;
-  margin-bottom: 15rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,6 +18,7 @@
 .home-wrapper{
    display: block;
 }
+
  .Topic{
   font-family: Tomorrow, sans-serif;
   color:#00BE67;
@@ -83,7 +91,6 @@
   transition:opacity 120ms linear;
 }
 
-
 .Download_CV:hover,
 .Download_CV:focus{
   color:#01111c;
@@ -103,7 +110,6 @@
 
 .myInfo{
   display: flex;
-  justify-content: start;
   gap: 1.5rem;
 }
 
