--- a/portfolio/src/style/Experience/skills.css
+++ b/portfolio/src/style/Experience/skills.css
@@ -1,6 +1,6 @@
 
 #Skills {
-  margin-top: 15rem;
+  margin-top: 30vh;
 }
 
 
@@ -211,7 +211,7 @@
   width: 100%;
   padding: 0 1px;
   max-width: 870px;
-  margin-top: 5px;
+  margin-top: 70px;
 }
 
 .skillset-tool {
