--- a/portfolio/src/style/contactMe.css
+++ b/portfolio/src/style/contactMe.css
@@ -1,6 +1,6 @@
 #ContactMe{
-    margin-top: 15rem;
-    margin-bottom: 15rem;
+    margin-top: 20vh;
+    margin-bottom: 50vh;
 }
 .contactMe-container{
     position: relative;
@@ -35,6 +35,7 @@
     text-shadow: 0 0 0.2rem rgba(204, 194, 194, 0.467),
     0 0 0.5rem  #06c57c;
 }
+
 .contact-icon{
   font-size: 150%;
   color:#00BE67;
@@ -73,18 +74,26 @@ textarea{
     margin-right: 15%;
     max-width: 800px;
 }
+
 ::placeholder{
     color:rgb(97, 209, 131);
     font-size: 110%;
 }
 
-.submit-btn{
+.submit-button{
+    font-family: Tomorrow, sans-serif;
+    font-size: 110%;
+    border-radius: 0.8rem;
     background-color: #00BE67;
     color: #6c0c79;
+    border: #6c0c79 solid;
+    border-width: 3px;
     width: 100%;
     padding: 1.5rem;
     max-width: 800px;
+    cursor: pointer;
 }
+
 @media screen and (max-width :1024px) {
     .contactMe-content{
         grid-template-columns: 1fr;
