--- a/portfolio/src/style/Experience/skills.css
+++ b/portfolio/src/style/Experience/skills.css
@@ -175,6 +175,48 @@
   }
 }
 
+@keyframes onionAnimation{
+  0% {
+    opacity: 0;
+    transform: translateX(-300px);
+  }
+  60% {
+    opacity: 1;
+    transform: translateX(40px);
+  }
+
+  80% { transform: translateX(-30px); }
+  100% { 
+    opacity: 1;
+    transform: translateX(0); }
+
+}
+
+@keyframes mottoAnimation{
+  0% {
+    opacity: 0;
+    transform: translateX(300px);
+  }
+  60% {
+    opacity: 1;
+    transform: translateX(-40px);
+  }
+
+  80% { transform: translateX(30px); }
+  100% { 
+    opacity: 1;
+    transform: translateX(0); }
+}
+
+@keyframes bounce {
+  70% { transform:translateY(0%); }
+  80% { transform:translateY(-25%); }
+  90% { transform:translateY(0%); }
+  95% { transform:translateY(-15%); }
+  97% { transform:translateY(0%); }
+  99% { transform:translateY(-5%); }
+  100% { transform:translateY(0); }
+}
 
 @keyframes clickColor {
   0%{
@@ -228,11 +270,18 @@
   bottom:10px;
   left:10px;
   margin-bottom:100px;
+  transition: opacity 1s;
+  opacity: 0;
+}
+
+.motto.mottto-appear-animate{
+  animation: mottoAnimation 1s forwards;
 }
 
 .motto-content{
   color:#fd00c6;
 }
+
 
 .Click-hints{
   position: relative;
@@ -240,9 +289,10 @@
   color: #0acb8e;
   text-shadow: 0 0 0.01em #FFF7,
                0 0 0.01em  #0cd690;
+  animation: bounce 0.8s infinite;
 }
 
-click{
+.click{
   color:#00f55e;
   text-shadow: 0 0 0.1em #FFF7,
   0 0 0.1em #00f55e;
@@ -253,35 +303,40 @@ click{
 .onion-img{
   height: 340px;
   margin-bottom: 200px;
+  opacity: 0;
+}
+
+.onion-img.onion-appear-animation{
+  animation: onionAnimation 1s forwards;
 }
 
 .left-first-layer.active-layer{
   fill:#F4C1E2;
-  animation: clickColor 1.5s forwards;
+  animation: clickColor 1s forwards;
 }
 
 
 .left-second-layer.active-layer{
   fill:#E2ACD1; 
-  animation: clickColor 1.5s forwards;
+  animation: clickColor 1s forwards;
 }
 
 
 .left-third-layer.active-layer{
   fill:#D193C1;
-  animation: clickColor 1.5s forwards;
+  animation: clickColor 1s forwards;
 }
 
 
 .left-fourth-layer.active-layer{
   fill:#C17CB3;
-  animation: clickColor 1.5s forwards;
+  animation: clickColor 1s forwards;
 }
 
 
 .left-fifth-layer.active-layer{
   fill:#AF64A1;
-  animation: clickColor 1.5s forwards;
+  animation: clickColor 1s forwards;
 }
 
 .layer-one,
@@ -296,6 +351,7 @@ click{
   color: #FF86C9;
   text-shadow: 0 0 0.2em #FFF7,
                0 0 0.3em  #f712c1;
+  animation: mottoAnimation 1.5s forwards;
 }
 
 .hidden{
@@ -324,8 +380,8 @@ click{
   margin-bottom:120px;
   display: grid;
   grid-template-columns: repeat(3, 1fr); 
-  
   min-width: 0;
+  animation: mottoAnimation 1.5s forwards;
 }
 
 .toolsItem{
