--- a/portfolio/src/style/contactMe.css
+++ b/portfolio/src/style/contactMe.css
@@ -1,16 +1,25 @@
 #ContactMe{
     margin-top: 20vh;
-    margin-bottom: 50vh;
+    margin-bottom: 10vh;
 }
+
 .contactMe-container{
     position: relative;
+
 }
+
+
+
 .contactMe-content{
     display: block;
     justify-content: center;
     align-items: center;
+    opacity: 0;
 }
-
+.contactMe-content.contact-appear-animation{
+    animation: bounce-in 1s forwards;
+  }
+  
 .MyLink-container{
     display: flex;
     flex-direction: column;
@@ -19,36 +28,6 @@
 
 .mylink-option{
     text-align: center;
-}
-
-.LinkName{
-    font-family: Tomorrow, sans-serif;
-    border-radius: 0.7rem;
-    background: linear-gradient(315deg,#2a0e2c,#6c0c79);
-    padding:1.2rem;
-    text-align: center;
-    border: #00BE67 solid;
-    transition: ease-in-out 1s;
-    cursor: pointer;
-    color:#00BE67;
-    top:10px;
-    text-shadow: 0 0 0.2rem rgba(204, 194, 194, 0.467),
-    0 0 0.5rem  #06c57c;
-}
-
-.contact-icon{
-  font-size: 150%;
-  color:#00BE67;
-}
-
-.LinkName:hover{
-    background: #001D31;
-}
-
-.ContactlinkTitle{
-  position: relative;
-  bottom:5px;
-  margin-left:10px;
 }
 
 form{
@@ -82,7 +61,7 @@ textarea{
 
 .submit-button{
     font-family: Tomorrow, sans-serif;
-    font-size: 110%;
+    font-size: 120%;
     border-radius: 0.8rem;
     background-color: #00BE67;
     color: #6c0c79;
