--- a/portfolio/src/style/project.css
+++ b/portfolio/src/style/project.css
@@ -100,6 +100,28 @@
     align-items: center;
     height: 100%; 
     width: 100%;
+    opacity: 0;
+}
+
+.frame.animate-frame{
+  animation: bounce-in 1s forwards;
+}
+
+@keyframes bounce-in {
+  0% {
+    opacity: 0;
+    transform: scale(.3);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(1.05);
+  }
+  70% { 
+      transform: scale(.9); 
+    }
+  100% { 
+     opacity: 1;
+     transform: scale(1); }
 }
 
 .frame::before{
