--- a/portfolio/src/style/contactMe.css
+++ b/portfolio/src/style/contactMe.css
@@ -8,8 +8,6 @@
 
 }
 
-
-
 .contactMe-content{
     display: block;
     justify-content: center;
@@ -71,6 +69,58 @@ textarea{
     padding: 1.5rem;
     max-width: 800px;
     cursor: pointer;
+    transition: ease-in 0.5s;
+}
+
+.submit-button:hover{
+    background-color: #001D31;
+    color: #00BE67;
+    text-shadow: 0 0 0.2em #FFF7,
+    0 0 0.3em  #00BE67;
+    box-shadow: 0 0 2em 0.5em #6c0c79;
+}
+
+/* pop up message */
+.Toastify__toast-theme--colored.Toastify__toast--error {
+  font-family: Tomorrow, sans-serif;
+  background-color: #F500BD;
+  color:#001D31;
+  border-radius: 0.5rem;
+  text-shadow: 0 0 2em #FFF7,
+  0 0 2em  #001D31;
+  box-shadow: inset 0 0 0.9rem  #F500BD,
+              0 0 0.9rem  #F500BD;
+}
+
+.Toastify__toast-theme--colored.Toastify__toast--success {
+  font-family: Tomorrow, sans-serif;
+  background-color: #00BE67;
+  border-radius: 0.5rem;
+  color:#001D31;
+  border-radius: 0.5rem;
+  text-shadow: 0 0 2em #FFF7,
+  0 0 2em  #001D31;
+  box-shadow: inset 0 0 0.9rem  #00BE67,
+              0 0 0.9rem  #00BE67;
+}
+
+.Toastify__progress-bar--success,
+.Toastify__progress-bar--error {
+  background-color: #001D31;
+  box-shadow: inset 0 0 1.2rem  #033d64,
+              0 0 1.2rem  #0c588b;
+}
+
+/* close button */
+.Toastify__close-button{
+   color:#001D31;
+   transition: 0.7s ease-in;
+   cursor: pointer;
+}
+
+.Toastify__close-button:hover,
+.Toastify__close-button:focus {
+  color: #00A1D5;
 }
 
 @media screen and (max-width :1024px) {
@@ -79,7 +129,6 @@ textarea{
         gap:2rem;
     }
 }
-
 
 @media screen and (max-width :600px) {
     .contactMe-content{
