--- a/portfolio/src/style/navbar.css
+++ b/portfolio/src/style/navbar.css
@@ -51,17 +51,16 @@ nav .wholeul{
 nav .wholeul .remove{
   position:relative;
   list-style-type: none;
-  width: 100%;
+  
 }
-
 
 nav .wholeul .remove .barlink{
   position: relative;
   display: block;
-  width:100%;
   display:flex;
   text-decoration: none;
   color:#F500BD;
+  width:100%;
 }
 
 nav .wholeul .remove .barlink .icon{
@@ -79,7 +78,7 @@ nav .wholeul .remove .barlink .icon ion-icon{
   cursor: pointer;
 }
 
-nav .wholeul .remove .barlink title{
+nav .wholeul .remove .barlink .navtitle{
   font-family: Tomorrow, sans-serif;
   position:relative; 
   display: block;
@@ -88,6 +87,7 @@ nav .wholeul .remove .barlink title{
   line-height: 60px;
   white-space: normal;
   cursor: pointer;
+  font-size: 100%;
 }
 
 hamburger-icon {
@@ -120,8 +120,8 @@ hamburger-icon:hover{
 nav .wholeul .remove .barlink::before {
   content: "";
   position: absolute;
-  width: 100%;
   height: 100%;
+  width: 100%;
   justify-content: center;
   align-items: center;
   background: linear-gradient(0deg, #bd00ff, #F500BD); 
@@ -131,6 +131,14 @@ nav .wholeul .remove .barlink::before {
   z-index: -1;
   opacity: 0; /* Initially transparent */
   transition: opacity 0.3s ease-in-out;
+}
+
+nav#open .wholeul .remove .barlink::before {
+  margin-left:-1%;
+  width: 296px;
+}
+
+nav#close .wholeul .remove .barlink::before{
   margin-left:-4%;
 }
 
@@ -187,7 +195,7 @@ nav .wholeul .remove .barlink:hover {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
   pointer-events: none; 
-  z-index: 10;
+  z-index: 4;
   display: none; 
 }
 
