--- a/portfolio/src/style/contactMe.css
+++ b/portfolio/src/style/contactMe.css
@@ -57,6 +57,16 @@ textarea{
     font-size: 110%;
 }
 
+.focused {
+  outline: none; /* Remove default focus outline */
+  border: #00BE67 solid;
+  box-shadow: inset 0 0 1rem  #00BE67,
+                    0 0 1rem  #00BE67;
+  text-shadow: 0 0 0.6em #FFF7,
+  0 0 0.1em  #2df69c;
+  transition: ease-in-out 0.4s;
+}
+
 .submit-button{
     font-family: Tomorrow, sans-serif;
     font-size: 120%;
@@ -123,17 +133,3 @@ textarea{
   color: #00A1D5;
 }
 
-@media screen and (max-width :1024px) {
-    .contactMe-content{
-        grid-template-columns: 1fr;
-        gap:2rem;
-    }
-}
-
-@media screen and (max-width :600px) {
-    .contactMe-content{
-        width:90% ;
-        grid-template-columns: 1fr;
-        gap:2rem;
-    }
-}
