--- a/portfolio/src/style/contactMe.css
+++ b/portfolio/src/style/contactMe.css
@@ -7,7 +7,40 @@
     position: relative;
 
 }
+.more-info{
+    font-family: Tomorrow, sans-serif;
+    text-align: center;
+    color: #F500BD;
+    font-size: 90%;
+    animation: bounce-in 1s forwards;
+}
+.myEmail{
+    color: #F500BD;
+    text-decoration: underline;
+}
 
+.copybtn{
+    font-family: Tomorrow, sans-serif;
+    background-color: #001D31;
+    border: #dd0aec solid 2px;
+    padding:0.7rem 1rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    color:#e600ff;
+    transition: ease-in 0.5s;
+    font-size: 80%;
+}
+
+.copybtn:hover{
+  background-color: #dd0aec;
+  text-shadow: 0 0 0.5em #FFF7,
+               0 0 1em  #001D31;
+  box-shadow: inset 0 0 1rem  #dd0aec,
+                    0 0 1rem  #dd0aec;
+  color: #001D31;
+}
+
+  
 .contactMe-content{
     display: block;
     justify-content: center;
